4-Adavance/Blue Green Deployment Yaml/green-ingress-demo.yaml
# API Version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress Object Name 
  name: green-ingress-demo
  # Namespace 
  namespace: k8s-training
spec:
  rules:
   # Rule Host match  /etc/hosts
   # host 80 443 
    - host: test.springbootdemo.com
      http:
        paths:
          - path: /
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            pathType: Prefix
            backend:
              service:
                name: springbootdemo-v2
                port:
                  number: 9999
