4-Adavance/Blue Green Deployment Yaml/springboot-demo-service-blue-v1.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: k8s-training
  labels:
    name: k8s-training
---
# API Version  
apiVersion: apps/v1
kind: Deployment
# Deployment metadata start
metadata:
  name: springbootdemo-deployment-v1
  labels:
    app: springbootdemo
    version: v1
  namespace: k8s-training  
# Deployment metadata end
# Pod spec start    
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springbootdemo-v1
# Pod spec end       
# template start      
  template:
    metadata:
      namespace: k8s-training
      labels:
        app: springbootdemo-v1
        version: v1
    spec:
      containers:
      - name: springbootdemo-v1
        image: lianduantraining/springbootdemo:v1
        ports:
        - containerPort: 9999
# template end 
---
apiVersion: v1
kind: Service
metadata:
  name: springbootdemo-v1
  namespace: k8s-training
spec:
  selector:
    app: springbootdemo-v1
    version: v1
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
---
# API Version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress Object Name 
  name: ingress-demo
  # Namespace 
  namespace: k8s-training
spec:
  rules:
   # Rule Host match  /etc/hosts
   # host 80 443 
    - host: springbootdemo.com
      http:
        paths:
          - path: /
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            pathType: Prefix
            backend:
              service:
                name: springbootdemo-v1
                port:
                  number: 9999
