4-Adavance/Blue Green Deployment Yaml/springboot-demo-service-green-v2.yaml
# API Version  
apiVersion: apps/v1
kind: Deployment
# Deployment metadata start
metadata:
  name: springbootdemo-deployment-v2
  labels:
    app: springbootdemo-v2
    version: v2
  namespace: k8s-training  
# Deployment metadata end
# Pod spec start    
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springbootdemo-v2
# Pod spec end       
# template start      
  template:
    metadata:
      namespace: k8s-training
      labels:
        app: springbootdemo-v2
        version: v2
    spec:
      containers:
      - name: springbootdemo-v2
        image: lianduantraining/springbootdemo:v2
        ports:
        - containerPort: 9999
# template end 
---
apiVersion: v1
kind: Service
metadata:
  name: springbootdemo-v2
  namespace: k8s-training
spec:
  selector:
    app: springbootdemo-v2
    version: v2
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999

---
# API Version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress Object Name 
  name: green-ingress-demo
  # Namespace 
  namespace: k8s-training
spec:
  rules:
   # Rule Host match  /etc/hosts
   # host 80 443 
    - host: test.springbootdemo.com
      http:
        paths:
          - path: /
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            pathType: Prefix
            backend:
              service:
                name: springbootdemo-v2
                port:
                  number: 9999
